--- a/Src/Karbon.Cms.Web/Karbon.Cms.Web.csproj
+++ b/Src/Karbon.Cms.Web/Karbon.Cms.Web.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -76,6 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\KarbonUtilityController.cs" />
     <Compile Include="Controllers\KarbonController.cs" />
     <Compile Include="Embed\AbstractEmbedProvider.cs" />
     <Compile Include="Embed\BlipEmbedProvider.cs" />
@@ -98,6 +101,7 @@
     <Compile Include="Hosting\MediaVirtualFile.cs" />
     <Compile Include="KarbonWebContext.cs" />
     <Compile Include="Models\KarbonViewModel.cs" />
+    <Compile Include="Models\SitemapNode.cs" />
     <Compile Include="Modules\KarbonRequestModule.cs" />
     <Compile Include="Mvc\KarbonView.cs" />
     <Compile Include="Embed\AbstractOEmbedProvider.cs" />
@@ -131,7 +135,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Karbon.Cms.Core\Karbon.Cms.Core.csproj">
       <Project>{0CBE1B67-2FB8-40AE-B93F-87FE0BC17246}</Project>
-      <Name>Karbon.Core</Name>
+      <Name>Karbon.Cms.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +145,13 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
